samples/_failures_safe/1761173055_07b735_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d31c279d.c: In function ‘main’:
./samples/SAFE/__tmp_d31c279d.c:173:5: error: expected declaration or statement at end of input
  173 |     }
      |     ^
